# python_web_job

./: README.md  exporter.py  jobs.csv  main.py  pyproject.toml  scrapper.py
templates/: home.html  report.html
